NTI-2463 Fix the share pills weight and vertical-alignment

--- a/src/editor/question/components/Sharing.scss
+++ b/src/editor/question/components/Sharing.scss
@@ -40,17 +40,16 @@
 		border-radius: 2px;
 		margin-right: 10px;
 		cursor: pointer;
+		line-height: 1;
 
 		i {
-			display: inline-block;
-			vertical-align: middle;
 			margin-right: 2px;
 		}
 
 		span {
 			font: normal 600 0.625rem/1.25rem $body-font-family;
 			text-transform: uppercase;
-			display: inline-block;
+			display: inline;
 			vertical-align: middle;
 		}
 	}
